--- a/Perceptron/perceptron_learning.ipynb
+++ b/Perceptron/perceptron_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "fce42ecd-07d5-43c1-b45d-54ca79f3f522",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "425d71a1",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "eeec4bf0",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "7c26623e-57a1-409e-b29f-204c860a4f87",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "807843e4-144e-40f4-962e-6afc1d695ed7",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
+   "id": "802a1000",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0     -2.201441\n",
+      "1     -0.291041\n",
+      "2     -0.327755\n",
+      "3     -0.075650\n",
+      "4     -0.862493\n",
+      "         ...   \n",
+      "995   -0.942094\n",
+      "996    1.222445\n",
+      "997   -0.112466\n",
+      "998   -0.403459\n",
+      "999    0.021351\n",
+      "Name: x1, Length: 1000, dtype: float64, 0     -0.468864\n",
+      "1      0.777277\n",
+      "2      0.040071\n",
+      "3      1.821915\n",
+      "4     -0.467493\n",
+      "         ...   \n",
+      "995   -0.835856\n",
+      "996   -0.403177\n",
+      "997   -1.688230\n",
+      "998   -0.412272\n",
+      "999   -0.499017\n",
+      "Name: x2, Length: 1000, dtype: float64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "b4ef7171-96c2-4b73-a242-26679322bbc0",
    "metadata": {},
    "outputs": [
@@ -180,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "33a2e769-af9d-4ab4-8374-52bddf29586e",
    "metadata": {},
    "outputs": [
@@ -237,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "f99ad81c-cb6e-49c3-bd6c-ebd7cd849f8f",
    "metadata": {},
    "outputs": [],
@@ -296,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "7eaac8e9-daee-457e-84f1-b52a7a0ba262",
    "metadata": {},
    "outputs": [
